--- a/_includes/archive-single-hobby.html
+++ b/_includes/archive-single-hobby.html
@@ -8,8 +8,8 @@
 
 <div class="{{ include.type | default: "list" }}__item">
   <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
-    <h2 class="archive__item-title" itemprop="headline">{{ title }}</h2>
-
-    {{ post.content }}
+    <h2 class="archive__item-title" itemprop="headline">
+      <a href="{{ base_path }}{{ post.url }}" rel="permalink">{{ title }}</a>
+    </h2>
   </article>
 </div>
