--- a/_includes/post_pagination.html
+++ b/_includes/post_pagination.html
@@ -1,6 +1,22 @@
 {% include base_path %}
 
-{% if page.previous or page.next %}
+{% comment %}<!-- Check if this is a hobbies page with custom pagination -->{% endcomment %}
+{% if page.prev_page or page.next_page %}
+  <nav class="pagination">
+    {% if page.prev_page %}
+      <a href="{{ base_path }}{{ page.prev_page.url }}" class="pagination--pager" style="text-align: center;">
+        <span style="display: block; font-size: 0.75em; color: #888; margin-bottom: 0.3em;">Previous</span>
+        <span style="font-weight: bold;">{{ page.prev_page.title }}</span>
+      </a>
+    {% endif %}
+    {% if page.next_page %}
+      <a href="{{ base_path }}{{ page.next_page.url }}" class="pagination--pager" style="text-align: center;">
+        <span style="display: block; font-size: 0.75em; color: #888; margin-bottom: 0.3em;">Next</span>
+        <span style="font-weight: bold;">{{ page.next_page.title }}</span>
+      </a>
+    {% endif %}
+  </nav>
+{% elsif page.previous or page.next %}
   <nav class="pagination">
     {% if page.previous %}
       <a href="{{ base_path }}{{ page.previous.url }}" class="pagination--pager" title="{{ page.previous.title | markdownify | strip_html }}">{{ site.data.ui-text[site.locale].pagination_previous | default: "Previous" }}</a>
