Remove cities hobby page, add cities map to sidebar

--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -173,4 +173,12 @@
       {% endif %}      
     </ul>
   </div>
+
+  <!-- Cities Footprint Map -->
+  <div class="author__cities-map" style="margin-top: 1em;">
+    <h4 style="margin-bottom: 0.5em; font-size: 0.9em; color: #494e52;">Cities I've Visited (58)</h4>
+    <div style="width: 100%; height: 180px; border-radius: 8px; overflow: hidden; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
+      <iframe src="/assets/maps/cities.html" style="width: 100%; height: 100%; border: none;"></iframe>
+    </div>
+  </div>
 </div>
