--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -5,7 +5,7 @@
   <div class="comment__content-wrapper">
     <h3 class="comment__author">
       {% unless include.url == blank %}
-        <a rel="nofollow" href="{{ include.url }}">{{ include.name }}</a>
+        <a rel="nofollow" href="{{ include.url }}" target="_blank">{{ include.name }}</a>
       {% else %}
         {{ include.name }}
       {% endunless %}
