--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -22,6 +22,7 @@
     overflow-y: auto;               // Add scrollbar if the sidebar is too long
     position: fixed;
     padding-top: $masthead-height;
+    padding-bottom: 150px;          // Add padding to prevent footer overlap
   }
 
   @include breakpoint($large) {
