--- a/_includes/archive-single-news.html
+++ b/_includes/archive-single-news.html
@@ -8,12 +8,14 @@
 
 <div class="{{ include.type | default: "list" }}__item">
   <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
-    <h2 class="archive__item-title" itemprop="headline">{{ title }}</h2>
-    
-    {% if post.date %}
-      <p class="page__date"><strong><i class="fa fa-fw fa-calendar" aria-hidden="true"></i></strong> <time datetime="{{ post.date | date_to_xmlschema }}">{{ post.date | date: "%B %d, %Y" }}</time></p>
-    {% endif %}
+    <h2 class="archive__item-title news-title-clickable" itemprop="headline" style="cursor: pointer;" onclick="showNewsDate('{{ post.date | date: "%B %d, %Y" }}')">{{ title }}</h2>
 
     {{ post.content }}
   </article>
 </div>
+
+<script>
+function showNewsDate(date) {
+  alert('Published on: ' + date);
+}
+</script>
