Add bilingual language switching feature (中英文切换功能)
- Add language toggle button in navigation bar next to theme toggle
- Implement complete i18n translation system with localStorage
- Translate all main pages: Home, News, Publications, Experiences, Hobbies
- Translate navigation menu items and sidebar elements
- Add translation data for Chinese and English
- Auto-detect and persist language preference
- Add documentation for language switching feature

--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -225,6 +225,17 @@
       }
     }
 
+    #language-toggle {
+      a {
+        width: 25px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        font-weight: 600;
+      }
+    }
+
     #theme-toggle {
       a {
         width: 25px;
