--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -15,9 +15,15 @@
               {% assign domain = base_path %}
             {% endif %}
             <li class="masthead__menu-item {% if page.url contains link.url and link.url != '/' %}selected{% endif %}">
-              <a href="{{ domain }}{{ link.url }}"{% if link.url contains '.pdf' or link.url contains 'http' %} target="_blank"{% endif %}>{{ link.title }}</a>
+              <a href="{{ domain }}{{ link.url }}"{% if link.url contains '.pdf' or link.url contains 'http' %} target="_blank"{% endif %} data-i18n="{{ link.title }}" data-i18n-zh="{{ link.title_zh }}">{{ link.title }}</a>
             </li>
           {% endfor %}
+          <li class="masthead__menu-item">
+            <a href="#" id="language-toggle" class="lang-toggle" title="切换语言">中</a>
+          </li>
+          <li class="masthead__menu-item">
+            <a href="#" id="theme-toggle"><i class="fas fa-fw fa-sun" id="theme-icon"></i></a>
+          </li>
         </ul>
         <ul class="hidden-links hidden"></ul>
       </nav>
