--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -21,9 +21,10 @@
           <li class="masthead__menu-item">
             <a href="#" id="language-toggle" class="lang-toggle" title="切换语言">中</a>
           </li>
-          <li class="masthead__menu-item">
+          <!-- Theme toggle commented out -->
+          <!-- <li class="masthead__menu-item">
             <a href="#" id="theme-toggle"><i class="fas fa-fw fa-sun" id="theme-icon"></i></a>
-          </li>
+          </li> -->
         </ul>
         <ul class="hidden-links hidden"></ul>
       </nav>
