--- a/_includes/archive-single-experience.html
+++ b/_includes/archive-single-experience.html
@@ -10,6 +10,7 @@
   <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
     <details class="experience-item">
       <summary class="experience-summary">
+        <span class="experience-arrow"></span>
         <span class="experience-title" itemprop="headline">{{ title }}</span>
         {% if post.venue %}
           <span class="experience-meta">
